[package]
name = "reservation-paymaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.6", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["cors"] }
serde = { version ="1.0.210", features = ["derive"] }
serde_json = { version ="1.0.128" }
hypernode = { path = "./hypernode" }
alloy = { version = "0.2", features = ["full", "node-bindings"] }
bitcoin = "0.32.2"
rand = "0.8.5"
ts-rs = "10.0"
dotenv = "0.15.0"
clap = { version = "4.0", features = ["derive", "env"] }
